Removed warp sound & Changed default map to long level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+EditorStartupMap=/Game/Pill_Maps/LongLevel.LongLevel
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -22,7 +22,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+GameDefaultMap=/Game/Pill_Maps/LongLevel.LongLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Pill/Blueprints/GameLogics/PillGameMode.PillGameMode_C
 GlobalDefaultServerGameMode=None
@@ -59,5 +59,3 @@ GlobalDefaultServerGameMode=None
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
-
-
